kafka-go-app/manifests/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-producer-to-kafka
  namespace: kafka-cluster # Policy must live in the same namespace as the TARGET (Kafka)
spec:
  podSelector:
    matchLabels:
      strimzi.io/cluster: my-cluster
      strimzi.io/name: my-cluster-kafka
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: default # Allow the whole default namespace
    ports:
    - protocol: TCP
      port: 9094
